docs/7.57/bundles/abap-keyword-documentation-abap-programming-language-obsolete-language-elements-obsolete-statements.md
# ABAP - Keyword Documentation / ABAP - Programming Language / Obsolete Language Elements / Obsolete Statements for RAP

Included pages: 11


### abenrap_obsolete.htm

---
title: "Obsolete Statements for RAP"
description: |
  -   Obsolete EML Statements(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_obsolete.htm) Obsolete ABP Statements(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_obsolete.htm) Obsolete ABAP EML Statements(https://help.sap.com/doc/abapdocu_757_index_htm/7.5
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm"
abapFile: "abenrap_obsolete.htm"
keywords: ["do", "if", "abenrap", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete Statements for RAP, ABENRAP_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0
A%0D%0ASuggestion for improvement:)

Obsolete Statements for RAP

-   [Obsolete EML Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_obsolete.htm)

Continue
[Obsolete ABP Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_obsolete.htm)
[Obsolete ABAP EML Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_obsolete.htm)
[Obsolete ABAP EML Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_le_obsolete.htm)


### abenabp_obsolete.htm

---
title: "Obsolete ABP Statements"
description: |
  -   METHODS, FOR BEHAVIOR(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm) -   METHODS, FOR DETERMINATION, VALIDATION(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm) METHODS, FOR BEHAVIOR(https://help.sap.com/d
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_obsolete.htm"
abapFile: "abenabp_obsolete.htm"
keywords: ["do", "if", "method", "abenabp", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete ABP Statements, ABENABP_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D
%0ASuggestion for improvement:)

Obsolete ABP Statements

-   [METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm)
-   [METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm)

Continue
[METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm)
[METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm)


### abapmethods_for_behavior.htm

---
title: "METHODS, FOR BEHAVIOR"
description: |
  Syntax  METHODS read   FOR BEHAVIOR ...    METHODS modify FOR BEHAVIOR ...    METHODS lock   FOR BEHAVIOR ...  Effect Obsolete declaration of ABP handler methods(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_handler_method_glosry.htm 'Glossary Entry') i
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm"
abapFile: "abapmethods_for_behavior.htm"
keywords: ["do", "if", "try", "method", "class", "abapmethods", "for", "behavior"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) →  [Obsolete ABP Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: METHODS, FOR BEHAVIOR, ABAPMETHODS_FOR_BEHAVIOR, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D
%0A%0D%0ASuggestion for improvement:)

METHODS, FOR BEHAVIOR

Syntax

  *{* METHODS read   FOR BEHAVIOR ... *}*
*|* *{* METHODS modify FOR BEHAVIOR ... *}*
*|* *{* METHODS lock   FOR BEHAVIOR ... *}*

Effect

Obsolete declaration of [ABP handler methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_handler_method_glosry.htm "Glossary Entry") in the [handler class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_handler_class_glosry.htm "Glossary Entry") of an [ABAP behavior pool](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbehavior_pool_glosry.htm "Glossary Entry"). When using the addition FOR BEHAVIOR, the methods must have one of the predefined names modify, read, or lock.

Instead the following declarations should be used:

-   [METHODS meth FOR READ   ...](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_rap_behv.htm)
-   [METHODS meth FOR MODIFY ...](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_rap_behv.htm)
-   [METHODS meth FOR LOCK   ...](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_rap_behv.htm)

Here, the name of the method is not prescribed. The meaning of the methods is defined by the addition FOR MODIFY, FOR READ, or FOR LOCK instead.


### abapmethods_for_det_val_obs.htm

---
title: "METHODS, FOR DETERMINATION, VALIDATION"
description: |
  Syntax  METHODS ... FOR DETERMINATION ...    METHODS ... FOR VALIDATION ...  Effect Obsolete declaration of ABP handler methods(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_handler_method_glosry.htm 'Glossary Entry') in the handler class(https://help.sap.com/
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm"
abapFile: "abapmethods_for_det_val_obs.htm"
keywords: ["do", "if", "try", "method", "class", "abapmethods", "for", "det", "val", "obs"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) →  [Obsolete ABP Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: METHODS, FOR DETERMINATION, VALIDATION, ABAPMETHODS_FOR_DET_VAL_OBS, 757%0D%0A%0D%0AE
rror:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

METHODS, FOR DETERMINATION, VALIDATION

Syntax

  *{* METHODS ... FOR DETERMINATION ... *}*
*|* *{* METHODS ... FOR VALIDATION ... *}*

Effect

Obsolete declaration of [ABP handler methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_handler_method_glosry.htm "Glossary Entry") in the [handler class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_handler_class_glosry.htm "Glossary Entry") of an [ABAP behavior pool](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbehavior_pool_glosry.htm "Glossary Entry").


### abenabp_obsolete.htm

---
title: "Obsolete ABP Statements"
description: |
  -   METHODS, FOR BEHAVIOR(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm) -   METHODS, FOR DETERMINATION, VALIDATION(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm) METHODS, FOR BEHAVIOR(https://help.sap.com/d
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_obsolete.htm"
abapFile: "abenabp_obsolete.htm"
keywords: ["do", "if", "method", "abenabp", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete ABP Statements, ABENABP_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D
%0ASuggestion for improvement:)

Obsolete ABP Statements

-   [METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm)
-   [METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm)

Continue
[METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_behavior.htm)
[METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_for_det_val_obs.htm)


### abeneml_obsolete.htm

---
title: "Obsolete ABAP EML Statements"
description: |
  -   GET FEATURES(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm) GET FEATURES(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm)
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_obsolete.htm"
abapFile: "abeneml_obsolete.htm"
keywords: ["do", "if", "abeneml", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete ABAP EML Statements, ABENEML_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%
0A%0D%0ASuggestion for improvement:)

Obsolete ABAP EML Statements

-   [GET FEATURES](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm)

Continue
[GET FEATURES](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm)


### abeneml_get_features.htm

---
title: "GET FEATURES"
description: |
  Obsolete Syntax Syntax Forms Short Form GET FEATURES ENTITY bdef FROM keys REQUEST request RESULT result_tab(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm) response_param(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_response.htm). G
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm"
abapFile: "abeneml_get_features.htm"
keywords: ["insert", "do", "if", "case", "try", "internal-table", "abeneml", "get", "features"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) →  [Obsolete ABAP EML Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: GET FEATURES, ABENEML_GET_FEATURES, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASugg
estion for improvement:)

GET FEATURES

Obsolete Syntax

Syntax Forms

Short Form
GET FEATURES ENTITY bdef FROM keys REQUEST request [RESULT result\_tab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm) *\[*[response\_param](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_response.htm)*\]*.
GET GLOBAL FEATURES ENTITY bdef REQUEST request [RESULT result\_tab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm).
Long Form
GET FEATURES OF bdef
     ENTITY bdef1 FROM keys REQUEST req [RESULT result\_tab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm)
    *\[*ENTITY bdef2 FROM keys REQUEST req [RESULT result\_tab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm)*\]*
    *\[*...*\]*
    *\[*[response\_param](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_response.htm)*\]*.
GET GLOBAL FEATURES OF bdef
     ENTITY bdef1 FROM keys REQUEST req [RESULT result\_tab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm)
    *\[*ENTITY bdef2 FROM keys REQUEST req [RESULT result\_tab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm)*\]*
    *\[*...*\]*.
Dynamic Form
GET FEATURES OPERATIONS features\_tab *\[*[response\_param](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_response.htm)*\]*.
GET GLOBAL FEATURES OPERATIONS global\_features\_tab.

Alternatives:

[1\. GET FEATURES ENTITY..., GET GLOBAL FEATURES ENTITY ...](#!ABAP_ALTERNATIVE_1@1@)
[2\. GET FEATURES OF ..., GET GLOBAL FEATURES OF ...](#!ABAP_ALTERNATIVE_2@2@)
[3\. GET FEATURES OPERATIONS ..., GET GLOBAL FEATURES OPERATIONS ...](#!ABAP_ALTERNATIVE_3@3@)

Effect

[GET PERMISSIONS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapget_permissions.htm) statements should be used instead.

Retrieves information about the following:

-   [Global feature control](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_glo_feature_control_glosry.htm "Glossary Entry"): Feature controls that depend on external factors like specific user settings or the business scope.
-   [Instance feature control](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_ins_feature_control_glosry.htm "Glossary Entry"): Checks depending on the state of an entity instance.
-   [Static feature control](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_field_char.htm): Specifies individual fields of an entity that have certain access restrictions, for example, fields that are marked as readonly in the [BDEF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_behavior_definition_glosry.htm "Glossary Entry").

For all characteristics, the information retrieval must be self-implemented in [RAP BO provider](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_provider_glosry.htm "Glossary Entry") implementations except for static feature controls. In latter case, the access restriction is directly defined in the BDEF. One example is when a field is marked as readonly.

Syntax Details

Syntax Part

Details

bdef

Specifies the name of root entity.

keys

Specifies an internal table of type [TYPE TABLE FOR *\[*INSTANCE*\]* FEATURES KEY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaptype_table_for.htm).

ENTITY bdef1, ENTITY bdef2, ...

bdef1, bdef2, ..., specify the names of the entities that are part of the [composition tree](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_composition_tree_glosry.htm "Glossary Entry") of bdef. They follow the keyword ENTITY.
A list of queries follows OF bdef. Each query (ENTITY bdef1 ... RESULT result\_tab) of the list has the same syntax as the short form. At least one query must be specified. The root entity itself can also be inserted in the position of bdef1, for example. bdef1, and so on, should be the entity alias names if provided in the [BDEF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_behavior_definition_glosry.htm "Glossary Entry"). Using the full entity name causes a warning. If the root entity is used in the list of operations, its alias name, if defined in the BDEF, should be used as well.

req

Specifies the request parameters in a structure of type [TYPE STRUCTURE FOR *\[*INSTANCE*\]* FEATURES REQUEST](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaptype_structure_for.htm) or [TYPE STRUCTURE FOR GLOBAL FEATURES REQUEST](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaptype_structure_for.htm) respectively.

result\_tab

Specifies an internal table containing the result of the information retrieval. See more information [here](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_result.htm).

response\_param

Specifies the response parameters. See more information [here](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapeml_response.htm).

features\_tab

Specifies an internal table for the dynamic form. It is of type ABP\_BEHV\_FEATURES\_TAB.

global\_features\_tab

Specifies an internal table for the dynamic form. It is of type ABP\_BEHV\_GLOBAL\_PERMISSION\_TAB.

Hint

If the recommended notation [strict](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_strict.htm) is used in the BDEF, GET FEATURES statements are not possible and the use of GET PERMISSIONS statements is enforced.

Alternative 1   

GET FEATURES ENTITY..., GET GLOBAL FEATURES ENTITY ...

Effect

The short form of the statement allows information to be retrieved about a single entity.

Alternative 2   

GET FEATURES OF ..., GET GLOBAL FEATURES OF ...

Effect

The long form of the statement allows information to be retrieved about multiple entities.

Alternative 3   

GET FEATURES OPERATIONS ..., GET GLOBAL FEATURES OPERATIONS ...

Effect

The dynamic form of the statement allows multiple instances to be collected for which information should be retrieved in multiple entities in one statement.


### abeneml_obsolete.htm

---
title: "Obsolete ABAP EML Statements"
description: |
  -   GET FEATURES(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm) GET FEATURES(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm)
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_obsolete.htm"
abapFile: "abeneml_obsolete.htm"
keywords: ["do", "if", "abeneml", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete ABAP EML Statements, ABENEML_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%
0A%0D%0ASuggestion for improvement:)

Obsolete ABAP EML Statements

-   [GET FEATURES](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm)

Continue
[GET FEATURES](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_get_features.htm)


### abenrap_le_obsolete.htm

---
title: "Obsolete ABAP EML Language Elements"
description: |
  -   Obsolete BDEF-Derived Types(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm) ABAP EML - Obsolete BDEF Derived Types(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm)
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_le_obsolete.htm"
abapFile: "abenrap_le_obsolete.htm"
keywords: ["do", "if", "types", "abenrap", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete ABAP EML Language Elements, ABENRAP_LE_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A
%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Obsolete ABAP EML Language Elements

-   [Obsolete BDEF-Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm)

Continue
[ABAP EML - Obsolete BDEF Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm)


### abapderived_types_obsolete.htm

---
title: "ABAP EML - Obsolete BDEF Derived Types"
description: |
  Syntax ... TYPE  TABLE  STRUCTURE  FOR LOCK bdef. Effect Special ABAP type that is used for internal tables and structures in the context of RAP(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_glosry.htm 'Glossary Entry') to enable the communication between a R
version: "7.57"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm"
abapFile: "abapderived_types_obsolete.htm"
keywords: ["do", "if", "try", "types", "internal-table", "abapderived", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) →  [Obsolete ABAP EML Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_le_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP EML - Obsolete BDEF Derived Types, ABAPDERIVED_TYPES_OBSOLETE, 757%0D%0A%0D%0AEr
ror:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

ABAP EML - Obsolete BDEF Derived Types

Syntax

... *\[*TYPE*\]* *{* TABLE *|* STRUCTURE *}* FOR LOCK bdef.

Effect

Special ABAP type that is used for internal tables and structures in the context of [RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_glosry.htm "Glossary Entry") to enable the communication between a [RAP BO provider](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_provider_glosry.htm "Glossary Entry") and a [RAP BO consumer](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_consumer_glosry.htm "Glossary Entry").

Overview

The following table covers the variants including information on the BDEF prerequisites and its components.

For more information on the components, see [Components of BDEF Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_comp.htm). For more information on the BDEF specifications, see the subtopics in [ABAP CDS - BDL for Behavior Definitions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl.htm).

TYPE TABLE FOR ...

Purpose

BDEF Prerequisites

Components

LOCK

Used to specify [RAP BO instances](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_instance_glosry.htm "Glossary Entry") that are to be locked in the context of the ABAP EML statement [SET LOCKS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapset_locks.htm). It is basically the same as TYPE TABLE KEY OF (or TYPE STRUCTURE FOR KEY OF respectively). In ADT, a variable typed with TYPE TABLE FOR LOCK shows TYPE TABLE FOR KEY OF (or TYPE STRUCTURE FOR LOCK shows TYPE STRUCTURE FOR KEY OF respectively) in the element information (F2).

See the details in the CDS BDL documentation for [locking](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_locking.htm).

The keys (not %key).
Note: %is\_draft and %pid are not possible.

Further Information

-   [TYPE TABLE FOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaptype_table_for.htm)
-   [TYPE STRUCTURE FOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaptype_structure_for.htm)


### abenrap_le_obsolete.htm

---
title: "Obsolete ABAP EML Language Elements"
description: |
  -   Obsolete BDEF-Derived Types(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm) ABAP EML - Obsolete BDEF Derived Types(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm)
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_le_obsolete.htm"
abapFile: "abenrap_le_obsolete.htm"
keywords: ["do", "if", "types", "abenrap", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete ABAP EML Language Elements, ABENRAP_LE_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A
%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Obsolete ABAP EML Language Elements

-   [Obsolete BDEF-Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm)

Continue
[ABAP EML - Obsolete BDEF Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_obsolete.htm)
